--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,31 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<h1><%= link_to @author.name,author_path(@author)%>'s Posts</h1>
+
+<p>
+<%= link_to "New", new_author_post_path(@author)%>	
+</p>	
+<table>
+  <tr>
+    <th>Title</th>
+    <th>Content</th>
+	<th></th>
+	<th></th>
+  </tr>
+
+<% @posts.sort_by {|obj| obj.posted}%>
+<% @posts.each do |post| %>
+  <tr>
+    <td><%= link_to post.title, author_post_path(post.author, post)%></td>
+    <td><%= post.content %></td>    
+	<td><%= link_to "Edit", edit_author_post_path(post.author, post)%></td>
+	<td><%= link_to 'Destroy', [post.author,post], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+		
+  </tr>
+<% end %>
+</table>
+
+<br />
+
+
+<%= link_to 'Back', author_path(@author) %>
+
+<%= link_to 'Home', root_path %>
