--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,23 +1,32 @@
 <h1>Welcome to the Blog</h1>
-<p> Posts <p>
+<p><h3> Posts </h3></p>
 	
 <table>
   <tr>
     <th>Title</th>
     <th>Content</th>
     <th>Author</th>
+	<th>Posted</th>
+	<th></th>
 	<th></th>
   </tr>
 
-<% @posts.sort_by {|obj| obj.posted}%>
-<% @posts.each do |post| %>
+<% @posts.sort_by {|obj| obj.created_at}%>
+<% @posts.reverse.each do |post| %>
   <tr>
-    <td><%= post.title %></td>
+    <td><%= link_to post.title, author_post_path(post.author, post)%></td>
     <td><%= post.content %></td>
-    <td><%= post.author.name %></td>
-	<td><%= link_to "Show", author_post_path(post.author, post)%>
+	<td><%= link_to post.author.name, author_posts_path(post.author)%></td>    
+	<td><%= l post.created_at, :format => :short%></td>
+	<td><%= link_to "Edit", edit_author_post_path(post.author, post)%></td>
+	<td><%= link_to 'Destroy', [post.author,post], method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
+
+<h3><%= link_to "Authors", authors_path %></h3>
+
+
+<h3><%= link_to "Tags", tags_path %></h3>
