Added Tag Views and Controllers

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -7,6 +7,9 @@
 		<%= f.label :content %><br />
 		<%= f.text_field :content %>
 	</div>
+	<div class="field">
+		<%= f.label :tag_names %><br />
+		<%= f.text_field :tag_names %>
 	<div class="actions">
 	  <%= f.submit %>
 	</div>
