Added some sass

--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -1,9 +1,9 @@
-<h1><%= @author.name%>'s Profile</h1>
+<div id="header"><%= @author.name%>'s Profile</div>
 
 <p> <%= @author.email %> </p>
 <p> <%= @author.facebook %></p>
 
-<h1><%= link_to "Posts", author_posts_path(@author)%></h1>
+<h3><%= link_to "Posts", author_posts_path(@author)%></h3>
 
 <%= link_to 'Back', authors_path %>
 <%= link_to 'Home', root_path %>
