--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Authors</h1>
+<div id="header">Authors</div>
 
 <p>
 <%= link_to "New", new_author_path(@author)%>	
@@ -10,15 +10,17 @@
 	<th></th>
 	<th></th>
   </tr>
-
+<% even = 0%>
 <% @authors.each do |author| %>
-  <tr>
+	
+  <%if even%2==0%> <tr> <% else %> <tr class ="alt"> <%end%> 
     <td><%= link_to author.name, author_path(author)%></td>
     <td><%= author.email %></td>    
 	<td><%= link_to "Edit", edit_author_path(author)%></td>
 	<td><%= link_to 'Destroy', author, method: :delete, data: { confirm: 'Are you sure?' } %></td>
 		
   </tr>
+  <% even = even+1%>
 <% end %>
 </table>
 
