--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,23 +1,30 @@
-<h1><%= @post.title %> - <%= l @post.created_at, :format => :short%></h1>
-<p><%= @post.content %></p>
+<div id="header">
+	<%= @post.title %> - <%= l @post.created_at, :format => :short%>
+</div>
 
-<h3>Comments</h3>
-<% @post.comments.each do |comment|%>
-<p><%= comment.content%></p>
-<p><%= comment.name%></p>
-<p><%= comment.email%></p>
-<p><hr></p>
-<% end %>
+<article>
+	<%= @post.content %>
+</article>
 
-<%=link_to "New Comment", new_author_post_comment_path(@post.author,@post)%>
+<div class = "comment">
+	<h4>Comments</h4>
+	<% @post.comments.each do |comment|%>
+	<p><%= comment.content%></p>
+	<p><%= comment.name%></p>
+	<p><%= comment.email%></p>
+	<p></p>
+	<% end %>
+	<%=link_to "New Comment", new_author_post_comment_path(@post.author,@post)%>
+	</div>
 
-<p><h3> Tags </h3> 
-<%@post.tags.each do |tag|%>
-<t><%= tag.name%></t>
-<% end %>
+<p>
+	<h4> Tags </h4> 
+	<%@post.tags.each do |tag|%>
+	<t><%= tag.name%></t>
+	<% end %>
 </p>
 
 <p>
-<%= link_to 'Back', author_posts_path %>
-<%= link_to 'Home', root_path %>
+	<%= link_to 'Back', author_posts_path %>
+	<%= link_to 'Home', root_path %>
 </p>
