--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Tags</h1>
+<div id="header">Tags</div>
 
 <p>
 <%= link_to "New", new_tag_path%>	
@@ -9,6 +9,7 @@
 	<th></th>
   </tr>
 
+<% even = 0%>
 <% @tags.each do |tag| %>
   <tr>
     <td><%= link_to tag.name, tag_path(tag)%></td>
