--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -21,6 +21,8 @@
 	<td><%= link_to 'Destroy', [post.author,post], method: :delete, data: { confirm: 'Are you sure?' } %></td>
 		
   </tr>
+  <% even = even+1%>
+
 <% end %>
 </table>
 
